[tool.poetry]
name = "redis-sample"
version = "0.1.0"
description = ""
authors = ["Deadmilkman <deadmilkman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
